recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:3: error: forward reference extends over definition of variable steps
  avance(length:Int)
         ^Spiral:3: error: forward reference extends over definition of variable length
  avance(length:Int)
         ^