recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if(steps != 0){
  avance(length:Int)
  gauche(angle)
  var steps:Int = steps-1
  var length:Int = length + 3
    spiral(steps, angle, length, increment)
  }
}